tests/specs/function_async_generator.txt
# mod.ts
export async function* ag() {}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export async function* ag() {}
  | ^


error[missing-return-type]: exported function is missing an explicit return type annotation
 --> /mod.ts:1:1
  | 
1 | export async function* ag() {}
  | ^


# output.txt
Defined in file:///mod.ts:1:1

async function* ag()


# output.json
[
  {
    "kind": "function",
    "name": "ag",
    "location": {
      "filename": "file:///mod.ts",
      "line": 1,
      "col": 0,
      "byteIndex": 0
    },
    "declarationKind": "export",
    "functionDef": {
      "params": [],
      "returnType": null,
      "hasBody": true,
      "isAsync": true,
      "isGenerator": true,
      "typeParams": []
    }
  }
]
